general refactoring and further unit tests